--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -1,3 +1,19 @@
 .navbar-itme {
   font-family: serif;
 }
+
+.main {
+  width: 750px;
+}
+
+.header_title {
+  font-family: cursive;
+  color: darkgoldenrod;
+}
+
+.header_subtitle {
+  font-family: -webkit-pictograph;
+  font-weight: bold;
+  color: darkkhaki;
+  font-size: 1.85rem;
+}
